--- a/firebase.json
+++ b/firebase.json
@@ -12,6 +12,33 @@
     ],
     "headers": [
       {
+        "source": "**/*.html",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache"
+          }
+        ]
+      },
+      {
+        "source": "**/*.js",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache"
+          }
+        ]
+      },
+      {
+        "source": "**/*.css",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache"
+          }
+        ]
+      },
+      {
         "source": "**/*.json",
         "headers": [
           {
@@ -21,6 +48,15 @@
           {
             "key": "Cache-Control",
             "value": "no-cache"
+          }
+        ]
+      },
+      {
+        "source": "**/*.{png,jpg,jpeg,svg,gif}",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "max-age=31536000" 
           }
         ]
       }
